--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "lib/index.d.ts",
   "files": [
     "lib",
-    "es"
+    "esm"
   ],
   "author": "Wei Zhu <yesmeck@gmail.com>",
   "license": "MIT",
