--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "npm run build:lib && npm run build:esm",
     "build:lib": "tsc",
     "build:esm": "tsc --module es6 --outDir esm",
-    "prepublishOnly": "npm test && npm run build",
+    "prepublishOnly": "npm run build",
     "storybook": "start-storybook -p 9009",
     "build-storybook": "build-storybook",
     "precommit": "lint-staged",
