--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,7 @@
 /coverage
 
 # production
-/lib
-/esm
+/dist
 /storybook-static
 
 # misc
@@ -17,6 +16,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+/.rpt2_cache
 
 yarn.lock
 package-lock.json
