--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.1",
     "@storybook/react": "^4.0.0-alpha.3",
-    "@types/react": "^16.4.7",
+    "@types/react": "^17.0.24",
     "@types/storybook__react": "^3.0.8",
     "awesome-typescript-loader": "^5.2.0",
     "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
     "babel-runtime": "^6.26.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
