--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "build-storybook": "build-storybook",
     "precommit": "lint-staged",
     "commitmsg": "commitlint -e $GIT_PARAMS",
-    "release": "standard-version"
+    "release": "standard-version",
+    "test": "jest"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.1",
     "@storybook/react": "^4.0.0-alpha.3",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.1",
+    "@types/jest": "^27.0.2",
     "@types/react": "^17.0.24",
     "@types/storybook__react": "^3.0.8",
     "awesome-typescript-loader": "^5.2.0",
@@ -41,6 +45,7 @@
     "babel-loader": "^8.2.2",
     "babel-runtime": "^6.26.0",
     "husky": "^0.14.3",
+    "jest": "^27.2.2",
     "lint-staged": "^7.2.0",
     "prettier": "^1.14.0",
     "react": "^16.4.1",
@@ -49,7 +54,8 @@
     "rollup-plugin-typescript2": "^0.16.1",
     "rollup-plugin-uglify": "^4.0.0",
     "standard-version": "^4.4.0",
-    "typescript": "^3.0.1"
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.3"
   },
   "peerDependencies": {
     "react": "^0.14.0 || >=15.0.0"
